fixed jumpy borders

--- a/custom/mixins/forms.less
+++ b/custom/mixins/forms.less
@@ -55,6 +55,7 @@
 // contrast against a dark gray background.
 .form-control-focus(@color: @input-border-focus) {
   @color-rgba: rgba(red(@color), green(@color), blue(@color), .6);
+  border: 2px solid transparent;
   &:focus {
     border: 2px solid @color;
     outline: 0;
